Tools/C-Header/GL/inarbeit/fertig/freeglut_std.h

/*
 * Initialization functions, see fglut_init.c
 */
 void     glutInit( int* pargc, char** argv );
 void     glutInitWindowPosition( int x, int y );
 void     glutInitWindowSize( int width, int height );
 void     glutInitDisplayMode( unsigned int displayMode );
 void     glutInitDisplayString( const char* displayMode );
/*
 * Process loop function, see fg_main.c
 */
 void     glutMainLoop( void );
/*
 * Window management functions, see fg_window.c
 */
 int      glutCreateWindow( const char* title );
 int      glutCreateSubWindow( int window, int x, int y, int width, int height );
 void     glutDestroyWindow( int window );
 void     glutSetWindow( int window );
 int      glutGetWindow( void );
 void     glutSetWindowTitle( const char* title );
 void     glutSetIconTitle( const char* title );
 void     glutReshapeWindow( int width, int height );
 void     glutPositionWindow( int x, int y );
 void     glutShowWindow( void );
 void     glutHideWindow( void );
 void     glutIconifyWindow( void );
 void     glutPushWindow( void );
 void     glutPopWindow( void );
 void     glutFullScreen( void );
/*
 * Display-related functions, see fg_display.c
 */
 void     glutPostWindowRedisplay( int window );
 void     glutPostRedisplay( void );
 void     glutSwapBuffers( void );
/*
 * Mouse cursor functions, see fg_cursor.c
 */
 void     glutWarpPointer( int x, int y );
 void     glutSetCursor( int cursor );
/*
 * Overlay stuff, see fg_overlay.c
 */
 void     glutEstablishOverlay( void );
 void     glutRemoveOverlay( void );
 void     glutUseLayer( GLenum layer );
 void     glutPostOverlayRedisplay( void );
 void     glutPostWindowOverlayRedisplay( int window );
 void     glutShowOverlay( void );
 void     glutHideOverlay( void );
/*
 * Menu stuff, see fg_menu.c
 */
 int      glutCreateMenu( void (* callback)( int menu ) );
 void     glutDestroyMenu( int menu );
 int      glutGetMenu( void );
 void     glutSetMenu( int menu );
 void     glutAddMenuEntry( const char* label, int value );
 void     glutAddSubMenu( const char* label, int subMenu );
 void     glutChangeToMenuEntry( int item, const char* label, int value );
 void     glutChangeToSubMenu( int item, const char* label, int value );
 void     glutRemoveMenuItem( int item );
 void     glutAttachMenu( int button );
 void     glutDetachMenu( int button );
/*
 * Global callback functions, see fg_callbacks.c
 */
 void     glutTimerFunc( unsigned int time, void (* callback)( int ), int value );
 void     glutIdleFunc( void (* callback)( void ) );
/*
 * Window-specific callback functions, see fg_callbacks.c
 */
 void     glutKeyboardFunc( void (* callback)( unsigned char, int, int ) );
 void     glutSpecialFunc( void (* callback)( int, int, int ) );
 void     glutReshapeFunc( void (* callback)( int, int ) );
 void     glutVisibilityFunc( void (* callback)( int ) );
 void     glutDisplayFunc( void (* callback)( void ) );
 void     glutMouseFunc( void (* callback)( int, int, int, int ) );
 void     glutMotionFunc( void (* callback)( int, int ) );
 void     glutPassiveMotionFunc( void (* callback)( int, int ) );
 void     glutEntryFunc( void (* callback)( int ) );
 void     glutKeyboardUpFunc( void (* callback)( unsigned char, int, int ) );
 void     glutSpecialUpFunc( void (* callback)( int, int, int ) );
 void     glutJoystickFunc( void (* callback)( unsigned int, int, int, int ), int pollInterval );
 void     glutMenuStateFunc( void (* callback)( int ) );
 void     glutMenuStatusFunc( void (* callback)( int, int, int ) );
 void     glutOverlayDisplayFunc( void (* callback)( void ) );
 void     glutWindowStatusFunc( void (* callback)( int ) );
 void     glutSpaceballMotionFunc( void (* callback)( int, int, int ) );
 void     glutSpaceballRotateFunc( void (* callback)( int, int, int ) );
 void     glutSpaceballButtonFunc( void (* callback)( int, int ) );
 void     glutButtonBoxFunc( void (* callback)( int, int ) );
 void     glutDialsFunc( void (* callback)( int, int ) );
 void     glutTabletMotionFunc( void (* callback)( int, int ) );
 void     glutTabletButtonFunc( void (* callback)( int, int, int, int ) );
/*
 * State setting and retrieval functions, see fg_state.c
 */
 int      glutGet( GLenum query );
 int      glutDeviceGet( GLenum query );
 int      glutGetModifiers( void );
 int      glutLayerGet( GLenum query );
/*
 * Font stuff, see fg_font.c
 */
 void     glutBitmapCharacter( void* font, int character );
 int      glutBitmapWidth( void* font, int character );
 void     glutStrokeCharacter( void* font, int character );
 int      glutStrokeWidth( void* font, int character );
 GLfloat  glutStrokeWidthf( void* font, int character ); /* GLUT 3.8 */
 int      glutBitmapLength( void* font, const unsigned char* string );
 int      glutStrokeLength( void* font, const unsigned char* string );
 GLfloat  glutStrokeLengthf( void* font, const unsigned char *string ); /* GLUT 3.8 */
/*
 * Geometry functions, see fg_geometry.c
 */

 void     glutWireCube( double size );
 void     glutSolidCube( double size );
 void     glutWireSphere( double radius, GLint slices, GLint stacks );
 void     glutSolidSphere( double radius, GLint slices, GLint stacks );
 void     glutWireCone( double base, double height, GLint slices, GLint stacks );
 void     glutSolidCone( double base, double height, GLint slices, GLint stacks );
 void     glutWireTorus( double innerRadius, double outerRadius, GLint sides, GLint rings );
 void     glutSolidTorus( double innerRadius, double outerRadius, GLint sides, GLint rings );
 void     glutWireDodecahedron( void );
 void     glutSolidDodecahedron( void );
 void     glutWireOctahedron( void );
 void     glutSolidOctahedron( void );
 void     glutWireTetrahedron( void );
 void     glutSolidTetrahedron( void );
 void     glutWireIcosahedron( void );
 void     glutSolidIcosahedron( void );
/*
 * Teapot rendering functions, found in fg_teapot.c
 * NB: front facing polygons have clockwise winding, not counter clockwise
 */
 void     glutWireTeapot( double size );
 void     glutSolidTeapot( double size );
/*
 * Game mode functions, see fg_gamemode.c
 */
 void     glutGameModeString( const char* string );
 int      glutEnterGameMode( void );
 void     glutLeaveGameMode( void );
 int      glutGameModeGet( GLenum query );
/*
 * Video resize functions, see fg_videoresize.c
 */
 int      glutVideoResizeGet( GLenum query );
 void     glutSetupVideoResizing( void );
 void     glutStopVideoResizing( void );
 void     glutVideoResize( int x, int y, int width, int height );
 void     glutVideoPan( int x, int y, int width, int height );
/*
 * Colormap functions, see fg_misc.c
 */
 void     glutSetColor( int color, GLfloat red, GLfloat green, GLfloat blue );
 GLfloat  glutGetColor( int color, int component );
 void     glutCopyColormap( int window );
/*
 * Misc keyboard and joystick functions, see fg_misc.c
 */
 void     glutIgnoreKeyRepeat( int ignore );
 void     glutSetKeyRepeat( int repeatMode );
 void     glutForceJoystickFunc( void );
/*
 * Misc functions, see fg_misc.c
 */
 int      glutExtensionSupported( const char* extension );
 void     glutReportErrors( void );
 void  __glutInitWithExit(int *argcp, char **argv, void ( *exitfunc)(int));
 int  __glutCreateWindowWithExit(const char *title, void ( *exitfunc)(int));
 int  __glutCreateMenuWithExit(void (* func)(int), void ( *exitfunc)(int));
#define FGUNUSED __attribute__((unused))
#define FGUNUSED