Tools/C-Header/GL/inarbeit/fertig/freeglut_std.pp


procedure glutInit(pargc:Plongint; argv:PPchar);cdecl;external;
procedure glutInitWindowPosition(x:longint; y:longint);cdecl;external;
procedure glutInitWindowSize(width:longint; height:longint);cdecl;external;
procedure glutInitDisplayMode(displayMode:dword);cdecl;external;
(* Const before type ignored *)
procedure glutInitDisplayString(displayMode:Pchar);cdecl;external;
{
 * Process loop function, see fg_main.c
  }
procedure glutMainLoop;cdecl;external;
{
 * Window management functions, see fg_window.c
  }
(* Const before type ignored *)
function glutCreateWindow(title:Pchar):longint;cdecl;external;
function glutCreateSubWindow(window:longint; x:longint; y:longint; width:longint; height:longint):longint;cdecl;external;
procedure glutDestroyWindow(window:longint);cdecl;external;
procedure glutSetWindow(window:longint);cdecl;external;
function glutGetWindow:longint;cdecl;external;
(* Const before type ignored *)
procedure glutSetWindowTitle(title:Pchar);cdecl;external;
(* Const before type ignored *)
procedure glutSetIconTitle(title:Pchar);cdecl;external;
procedure glutReshapeWindow(width:longint; height:longint);cdecl;external;
procedure glutPositionWindow(x:longint; y:longint);cdecl;external;
procedure glutShowWindow;cdecl;external;
procedure glutHideWindow;cdecl;external;
procedure glutIconifyWindow;cdecl;external;
procedure glutPushWindow;cdecl;external;
procedure glutPopWindow;cdecl;external;
procedure glutFullScreen;cdecl;external;
{
 * Display-related functions, see fg_display.c
  }
procedure glutPostWindowRedisplay(window:longint);cdecl;external;
procedure glutPostRedisplay;cdecl;external;
procedure glutSwapBuffers;cdecl;external;
{
 * Mouse cursor functions, see fg_cursor.c
  }
procedure glutWarpPointer(x:longint; y:longint);cdecl;external;
procedure glutSetCursor(cursor:longint);cdecl;external;
{
 * Overlay stuff, see fg_overlay.c
  }
procedure glutEstablishOverlay;cdecl;external;
procedure glutRemoveOverlay;cdecl;external;
procedure glutUseLayer(layer:TGLenum);cdecl;external;
procedure glutPostOverlayRedisplay;cdecl;external;
procedure glutPostWindowOverlayRedisplay(window:longint);cdecl;external;
procedure glutShowOverlay;cdecl;external;
procedure glutHideOverlay;cdecl;external;
{
 * Menu stuff, see fg_menu.c
  }
function glutCreateMenu(callback:procedure (menu:longint)):longint;cdecl;external;
procedure glutDestroyMenu(menu:longint);cdecl;external;
function glutGetMenu:longint;cdecl;external;
procedure glutSetMenu(menu:longint);cdecl;external;
(* Const before type ignored *)
procedure glutAddMenuEntry(_label:Pchar; value:longint);cdecl;external;
(* Const before type ignored *)
procedure glutAddSubMenu(_label:Pchar; subMenu:longint);cdecl;external;
(* Const before type ignored *)
procedure glutChangeToMenuEntry(item:longint; _label:Pchar; value:longint);cdecl;external;
(* Const before type ignored *)
procedure glutChangeToSubMenu(item:longint; _label:Pchar; value:longint);cdecl;external;
procedure glutRemoveMenuItem(item:longint);cdecl;external;
procedure glutAttachMenu(button:longint);cdecl;external;
procedure glutDetachMenu(button:longint);cdecl;external;
{
 * Global callback functions, see fg_callbacks.c
  }
procedure glutTimerFunc(time:dword; callback:procedure (para1:longint); value:longint);cdecl;external;
procedure glutIdleFunc(callback:procedure );cdecl;external;
{
 * Window-specific callback functions, see fg_callbacks.c
  }
procedure glutKeyboardFunc(callback:procedure (para1:byte; para2:longint; para3:longint));cdecl;external;
procedure glutSpecialFunc(callback:procedure (para1:longint; para2:longint; para3:longint));cdecl;external;
procedure glutReshapeFunc(callback:procedure (para1:longint; para2:longint));cdecl;external;
procedure glutVisibilityFunc(callback:procedure (para1:longint));cdecl;external;
procedure glutDisplayFunc(callback:procedure );cdecl;external;
procedure glutMouseFunc(callback:procedure (para1:longint; para2:longint; para3:longint; para4:longint));cdecl;external;
procedure glutMotionFunc(callback:procedure (para1:longint; para2:longint));cdecl;external;
procedure glutPassiveMotionFunc(callback:procedure (para1:longint; para2:longint));cdecl;external;
procedure glutEntryFunc(callback:procedure (para1:longint));cdecl;external;
procedure glutKeyboardUpFunc(callback:procedure (para1:byte; para2:longint; para3:longint));cdecl;external;
procedure glutSpecialUpFunc(callback:procedure (para1:longint; para2:longint; para3:longint));cdecl;external;
procedure glutJoystickFunc(callback:procedure (para1:dword; para2:longint; para3:longint; para4:longint); pollInterval:longint);cdecl;external;
procedure glutMenuStateFunc(callback:procedure (para1:longint));cdecl;external;
procedure glutMenuStatusFunc(callback:procedure (para1:longint; para2:longint; para3:longint));cdecl;external;
procedure glutOverlayDisplayFunc(callback:procedure );cdecl;external;
procedure glutWindowStatusFunc(callback:procedure (para1:longint));cdecl;external;
procedure glutSpaceballMotionFunc(callback:procedure (para1:longint; para2:longint; para3:longint));cdecl;external;
procedure glutSpaceballRotateFunc(callback:procedure (para1:longint; para2:longint; para3:longint));cdecl;external;
procedure glutSpaceballButtonFunc(callback:procedure (para1:longint; para2:longint));cdecl;external;
procedure glutButtonBoxFunc(callback:procedure (para1:longint; para2:longint));cdecl;external;
procedure glutDialsFunc(callback:procedure (para1:longint; para2:longint));cdecl;external;
procedure glutTabletMotionFunc(callback:procedure (para1:longint; para2:longint));cdecl;external;
procedure glutTabletButtonFunc(callback:procedure (para1:longint; para2:longint; para3:longint; para4:longint));cdecl;external;
{
 * State setting and retrieval functions, see fg_state.c
  }
function glutGet(query:TGLenum):longint;cdecl;external;
function glutDeviceGet(query:TGLenum):longint;cdecl;external;
function glutGetModifiers:longint;cdecl;external;
function glutLayerGet(query:TGLenum):longint;cdecl;external;
{
 * Font stuff, see fg_font.c
  }
procedure glutBitmapCharacter(font:pointer; character:longint);cdecl;external;
function glutBitmapWidth(font:pointer; character:longint):longint;cdecl;external;
procedure glutStrokeCharacter(font:pointer; character:longint);cdecl;external;
function glutStrokeWidth(font:pointer; character:longint):longint;cdecl;external;
function glutStrokeWidthf(font:pointer; character:longint):TGLfloat;cdecl;external;
{ GLUT 3.8  }
(* Const before type ignored *)
function glutBitmapLength(font:pointer; _string:Pbyte):longint;cdecl;external;
(* Const before type ignored *)
function glutStrokeLength(font:pointer; _string:Pbyte):longint;cdecl;external;
(* Const before type ignored *)
function glutStrokeLengthf(font:pointer; _string:Pbyte):TGLfloat;cdecl;external;
{ GLUT 3.8  }
{
 * Geometry functions, see fg_geometry.c
  }
procedure glutWireCube(size:Tdouble);cdecl;external;
procedure glutSolidCube(size:Tdouble);cdecl;external;
procedure glutWireSphere(radius:Tdouble; slices:TGLint; stacks:TGLint);cdecl;external;
procedure glutSolidSphere(radius:Tdouble; slices:TGLint; stacks:TGLint);cdecl;external;
procedure glutWireCone(base:Tdouble; height:Tdouble; slices:TGLint; stacks:TGLint);cdecl;external;
procedure glutSolidCone(base:Tdouble; height:Tdouble; slices:TGLint; stacks:TGLint);cdecl;external;
procedure glutWireTorus(innerRadius:Tdouble; outerRadius:Tdouble; sides:TGLint; rings:TGLint);cdecl;external;
procedure glutSolidTorus(innerRadius:Tdouble; outerRadius:Tdouble; sides:TGLint; rings:TGLint);cdecl;external;
procedure glutWireDodecahedron;cdecl;external;
procedure glutSolidDodecahedron;cdecl;external;
procedure glutWireOctahedron;cdecl;external;
procedure glutSolidOctahedron;cdecl;external;
procedure glutWireTetrahedron;cdecl;external;
procedure glutSolidTetrahedron;cdecl;external;
procedure glutWireIcosahedron;cdecl;external;
procedure glutSolidIcosahedron;cdecl;external;
{
 * Teapot rendering functions, found in fg_teapot.c
 * NB: front facing polygons have clockwise winding, not counter clockwise
  }
procedure glutWireTeapot(size:Tdouble);cdecl;external;
procedure glutSolidTeapot(size:Tdouble);cdecl;external;
{
 * Game mode functions, see fg_gamemode.c
  }
(* Const before type ignored *)
procedure glutGameModeString(_string:Pchar);cdecl;external;
function glutEnterGameMode:longint;cdecl;external;
procedure glutLeaveGameMode;cdecl;external;
function glutGameModeGet(query:TGLenum):longint;cdecl;external;
{
 * Video resize functions, see fg_videoresize.c
  }
function glutVideoResizeGet(query:TGLenum):longint;cdecl;external;
procedure glutSetupVideoResizing;cdecl;external;
procedure glutStopVideoResizing;cdecl;external;
procedure glutVideoResize(x:longint; y:longint; width:longint; height:longint);cdecl;external;
procedure glutVideoPan(x:longint; y:longint; width:longint; height:longint);cdecl;external;
{
 * Colormap functions, see fg_misc.c
  }
procedure glutSetColor(color:longint; red:TGLfloat; green:TGLfloat; blue:TGLfloat);cdecl;external;
function glutGetColor(color:longint; component:longint):TGLfloat;cdecl;external;
procedure glutCopyColormap(window:longint);cdecl;external;
{
 * Misc keyboard and joystick functions, see fg_misc.c
  }
procedure glutIgnoreKeyRepeat(ignore:longint);cdecl;external;
procedure glutSetKeyRepeat(repeatMode:longint);cdecl;external;
procedure glutForceJoystickFunc;cdecl;external;
{
 * Misc functions, see fg_misc.c
  }
(* Const before type ignored *)
function glutExtensionSupported(extension:Pchar):longint;cdecl;external;
procedure glutReportErrors;cdecl;external;
{ Comment from glut.h of classic GLUT:

   Win32 has an annoying issue where there are multiple C run-time
   libraries (CRTs).  If the executable is linked with a different CRT
   from the GLUT DLL, the GLUT DLL will not share the same CRT static
   data seen by the executable.  In particular, atexit callbacks registered
   in the executable will not be called if GLUT calls its (different)
   exit routine).  GLUT is typically built with the
   "/MD" option (the CRT with multithreading DLL support), but the Visual
   C++ linker default is "/ML" (the single threaded CRT).

   One workaround to this issue is requiring users to always link with
   the same CRT as GLUT is compiled with.  That requires users supply a
   non-standard option.  GLUT 3.7 has its own built-in workaround where
   the executable's "exit" function pointer is covertly passed to GLUT.
   GLUT then calls the executable's exit function pointer to ensure that
   any "atexit" calls registered by the application are called if GLUT
   needs to exit.

   Note that the __glut*WithExit routines should NEVER be called directly.
   To avoid the atexit workaround, #define GLUT_DISABLE_ATEXIT_HACK.  }
{ to get the prototype for exit()  }
{$include <stdlib.h>}
{$if defined(_WIN32) && !defined(GLUT_DISABLE_ATEXIT_HACK) && !defined(__WATCOMC__)}

procedure __glutInitWithExit(argcp:Plongint; argv:PPchar; exitfunc:procedure (para1:longint));cdecl;external;
(* Const before type ignored *)
function __glutCreateWindowWithExit(title:Pchar; exitfunc:procedure (para1:longint)):longint;cdecl;external;
function __glutCreateMenuWithExit(func:procedure (para1:longint); exitfunc:procedure (para1:longint)):longint;cdecl;external;
{$ifndef FREEGLUT_BUILDING_LIB}
{$if defined(__GNUC__)}

{ was #define dname def_expr }
function FGUNUSED : longint; { return type might be wrong }

{$else}
{$define FGUNUSED}
{$endif}
{

static void  FGUNUSED glutInit_ATEXIT_HACK(int *argcp, char **argv)  __glutInitWithExit(argcp, argv, exit); 
#define glutInit glutInit_ATEXIT_HACK
static int  FGUNUSED glutCreateWindow_ATEXIT_HACK(const char *title)  return __glutCreateWindowWithExit(title, exit); 
#define glutCreateWindow glutCreateWindow_ATEXIT_HACK
static int  FGUNUSED glutCreateMenu_ATEXIT_HACK(void (* func)(int))  return __glutCreateMenuWithExit(func, exit); 
#define glutCreateMenu glutCreateMenu_ATEXIT_HACK
